# scu

./: .gitignore  .gitlab-ci.yml  CHANGES.md  CONFIGURATION.md  CUSTOM_LOGO.md  Cargo.toml  LICENSE  README.md  build.rs  build_release.sh  install.sh  todo  uninstall.sh  update_pci_ids.py
config/: default.json
src/: about.rs  args.rs  config.rs  data.rs  hardware.rs  info.rs  main.rs  pci_ids.rs  software.rs  utils.rs
src/data/: ascii_art.rs  distro_colors.rs  mod.rs  table.rs
src/display/: mod.rs
src/display/modes/: mod.rs
src/display_mode/: mod.rs
src/display_mode/neomimic/: color_blocks.rs  config.rs  display.rs  logo.rs  mod.rs  modules.rs  row.rs  run.rs
src/hardware/: battery.rs  cpu.rs  device.rs  drive.rs  gpu.rs  ram.rs
src/info/: battery.rs  collect.rs  cpu.rs  desktop_environment.rs  device_name.rs  disks.rs  display_brightness.rs  display_server.rs  drives.rs  gpu.rs  graphics.rs  hostname.rs  init_system.rs  kernel.rs  memory.rs  mod.rs  os_release.rs  packages.rs  processor.rs  ram.rs  rootfs.rs  shell.rs  struct.rs  system.rs  terminal.rs  uptime.rs  username.rs  window_manager.rs
src/info_deprecated_way/: mod.rs
src/modules/: arch.rs  battery.rs  brightness.rs  cpu.rs  de.rs  device.rs  disks.rs  display_brightness.rs  display_server.rs  gpu.rs  hostname.rs  init.rs  init_system.rs  kernel.rs  locale.rs  mod.rs  os.rs  os_release.rs  packages.rs  ram.rs  rootfs.rs  shell.rs  terminal.rs  uptime.rs  username.rs  wm.rs
src/scu/: hardware.rs  lib.rs  pci_ids.rs  software.rs  utils.rs  version.rs
src/software/: graphics.rs  init_system.rs  kernel.rs  os.rs  packages.rs  terminal.rs
src/util/: colorize.rs  len.rs  libc.rs  mod.rs
src/utils/: ascii_art.rs  colorize.rs  converter.rs  distro_colors.rs  fs.rs  len.rs  libc.rs  process.rs  string.rs  whoami.rs
(+107 files in other folders)
