[package]
name = "scu"
description = "a command line system info fetch utility is aimed at informativeness"
homepage = "https://gitlab.com/omnid/scu"
authors = ["Artem Sokolovskiy <a641557@gmail.com>"]
license = "GPLv3"
version = "1.6.1"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
bitflags = "2.6.0"
libscu = { version = "3.0.0", git = "https://gitlab.com/omnid/libscu", features = [
    "full",
] }
logs.git = "https://gitlab.com/omnid/rust-crates/logs"
regex-lite = { version = "0.1.5" }
simpleargs = "0.1.0"
