[package]
name = "scu"
description = "a command line system info fetch utility is aimed at informativeness"
homepage = "https://gitlab.com/omnid/scu"
authors = ["Artem Sokolovskiy <a641557@gmail.com>"]
license = "GPLv3"
version = "2.0.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
json.git = "https://gitlab.com/omnid/rust-crates/json-rust"
libscu = { git = "https://gitlab.com/omnid/libscu", features = ["full"] }
logs.git = "https://gitlab.com/omnid/rust-crates/logs"
regex-lite = { version = "0.1.5" }
simpleargs = "0.1.0"
