[package]
name = "scu"
description = "a command line system info fetch utility is aimed at informativeness"
homepage = "https://gitlab.com/charidot/scu"
authors = ["Artem Sokolovskiy <a641557@gmail.com>"]
license = "GPLv3"
version = "2.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
json.git = "https://gitlab.com/charidot/rust-crates/json-rust"
libscu = { git = "https://gitlab.com/charidot/libscu", features = ["full"] }
logs.git = "https://gitlab.com/charidot/rust-crates/logs"
regex-lite = { version = "0.1.5" }
simpleargs = "0.1.0"
